force-app/main/default/objects/ASN_Teaching_Periods__mdt.object
<CustomObject>
    <description>Custom metadata type to maintain the Teaching periods group wise collection of the CI sequence numbers</description>
    <fields>
        <fullName>Academic_Year__c</fullName>
        <description>Academic year configuration which is used to filter Unit Attempts</description>
        <label>Academic Year</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_CI_Sequence_Numbers__c</fullName>
        <description>To group CI sequence numbers</description>
        <label>Group CI Sequence Numbers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Location value where the teaching period is eligible for ASN submission</description>
        <inlineHelpText>Location value where the teaching period is exclusively eligible for ASN submission. (Wherein, null = any.)</inlineHelpText>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teaching_Period__c</fullName>
        <description>The teaching period which groups some CI sequence numbers</description>
        <label>Teaching Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ASN Teaching Periods</label>
    <listViews>
        <fullName>All_View</fullName>
        <columns>MasterLabel</columns>
        <columns>Teaching_Period__c</columns>
        <columns>Group_CI_Sequence_Numbers__c</columns>
        <columns>Location__c</columns>
        <filterScope>Everything</filterScope>
        <label>All_View</label>
    </listViews>
    <pluralLabel>ASN Teaching Period</pluralLabel>
</CustomObject>